--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,11 +3,11 @@
 github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 patreon: # Replace with a single Patreon username
 open_collective: github-profile-readme-generator
-ko_fi: rahuldkjain
+ko_fi: RiskyHariAdi
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 custom:
-  ["https://paypal.me/rahuldkjain", "https://www.buymeacoffee.com/rahuldkjain"]
+  ["https://paypal.me/RiskyHariAdi", "https://www.buymeacoffee.com/RiskyHariAdi"]
