--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,10 +6,10 @@
   "commit": false,
   "contributors": [
     {
-      "login": "riskyhariadi",
-      "name": "RiskyHariAdi",
+      "login": "sarbikbetal",
+      "name": "Sarbik Betal",
       "avatar_url": "https://avatars2.githubusercontent.com/u/41508422?v=4",
-      "profile": "https://github.com/riskyhariadi",
+      "profile": "https://github.com/sarbikbetal",
       "contributions": [
         "code"
       ]
@@ -18,7 +18,7 @@
       "login": "Hardik0307",
       "name": "Hardik Bagada",
       "avatar_url": "https://avatars3.githubusercontent.com/u/41434099?v=4",
-      "profile": "https://github.com/riskyhariadi",
+      "profile": "https://github.com/Hardik0307",
       "contributions": [
         "code"
       ]
